# project-terracotta

./: CMakeLists.txt  README.md
src/: Canvas.c  Canvas.h  Editor.c  Editor.h  Pallet.c  Pallet.h  TextureAtlas.c  TextureAtlas.h  Tile.c  Tile.h  main.c  utils.c  utils.h
